--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,8 @@
 @import "./reset";
 @import "font-awesome";
 @import "posts";
+// @import "modules/user";
+@import "config/colors";
+@import "modules/flash";
+@import "modules/group";
+// @import "modules/side_bar"
