--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,98 +1,16 @@
--# .toppage
--#   -# .header
--#   -#   グループを作成しました
--#   .leftcontent
--#     .leftcontent__header
--#       光夫
--#       .leftcontent__config__iconbox
--#         .leftcontent__config__iconbox__brush
--#           = link_to new_group_path do
--#             = fa_icon 'paint-brush'
--#             %span<>
--#         .leftcontent__config__iconbox__cog
--#           = link_to edit_user_path(current_user)  do
--#             =fa_icon 'cog'
--#             %span<>
--#       .leftcontent__roomlist
--#         - current_user.groups.each do |group|
--#           .leftcontent__roomlist__roomname
--#             = link_to group_messages_path(group) do
--#               .leftcontent__roomlist__roomname__firstmessage
--#                 = group.name
-
--#   .rightcontent
--#     .rightcontent__roomedit
--#       .rightcontent__roomname
--#         roomname
--#         .rightcontent__roomname__memberlist
--#           menbername
--#         .rightcontent__edit
--#           = link_to 'edit' 
--#           -# edit_group_path(@group) do
--#           -# .rightcontent__edit__text
-          
--#             -# edit_group_path(params[:group_id]) do
--#     .rightcontent__messageslist
--#       .rightcontent__message
--#         massge
--#         .rightcontent_time
--#           time day
--#       .rightcontent__message__a
--#         コメント
-
--#     .rightcontent__textarea
--#       %form
--#         .rightcontent__textarea__message
--#           %input.input-box{placeholder: "type a message", type: "text"}/
--#           %label.rightcontent__textarea__message
--#             = fa_icon 'image',class: 'icon'
--#             %input.message_image{type: 'file'}/
--#         .rightcontent__textarea__send
--#           %input.send{type: 'submit', value: 'Send'}
-
--# .wrapper
-
-  
 .toppage
   = render 'shared/side_bar'
-  -# .header
-  -#   グループを作成しました
-  -# .leftcontent
-  -#   .leftcontent__header
-  -#     .leftcontent__config
-  -#       .leftcontent__config__user
-  -#         光夫
-  -#       .leftcontent__config__iconbox
-  -#         .leftcontent__config__iconbox__brush
-  -#           = link_to new_group_path do
-  -#             = fa_icon 'paint-brush'
-  -#             %span<>
-  -#         .leftcontent__config__iconbox__cog
-  -#           = link_to edit_user_path(current_user) do
-  -#             =fa_icon 'cog'
-  -#             %span<>
-  -#     .leftcontent__roomlist
-  -#       .leftcontent__roomlist__roomname
-  -#         roomname
-  -#         .leftcontent__roomlist__roomname__firstmessage
-  -#           hallo
 
   .rightcontent
     .rightcontent__roomedit
       .rightcontent__roomname
         = @group.name
         .rightcontent__roomname__memberlist
-          menbername
+          - @group.users.each do |user|
+            = "#{user.name}, "
           = link_to edit_group_path(@group.id) do
             .rightcontent__edit
               Edit
-    -# .rightcontent__messageslist
-    -#   .rightcontent__message
-    -#     massage
-    -#   .rightcontent_time
-    -#     time day
-    -#   .rightcontent__message__a
-    -#     コメント
 
     .rightcontent__messageslist
       = render @messages
