自動更新機能

--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,4 +1,4 @@
-.rightcontent__message
+.rightcontent__message{data:{message_id: message.id}}
   .rightcontent__message__name
     = message.user.name
   .rightcontent_time
