--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -29,12 +29,12 @@
       %label.chat-group-form__label{for: "chat_group_チャットメンバー"} チャットメンバー
     .chat-group-form__field--right
       .chat-group-user.clearfix.js-chat-member
-        = f.hidden_field :user_id, value: current_user.id 
+        -# = f.hidden_field :user_ids, value: current_user.id 
         
       .chat-group-users#js-add-user
         - @group.users.each do |user|
           .chat-group-user
-            = f.hidden_field :user_id, value: current_user.id 
+            = hidden_field_tag 'group[user_ids][]', user.id
             = user.name
             .chat-group-user__names
               .chat-group-user__name
